<resources>
    <string name="app_name">G4 - Parcial Practico </string>

    <string name="login_usuario">Usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login_titulo">Rick and Morty</string>
    <string name="login_olvidaste">Olvidaste tu contraseña?</string>
    <string name="login_olvido">Recuperar contraseña</string>
    <string name="login_recuperar">Recuperar</string>
    <string name="login_recuperar_texto">Se te enviará por mail una nueva!</string>
    <string name="login_continuar">Continuar</string>
    <string name="login_email">Email</string>
    <string name="login_email_enviado">"¡Email enviado!"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="sett_night_mode">Night Mode</string>
    <string name="sett_day_mode">Day Mode</string>
    <string name="sett_buscador_on">Buscador habilitado</string>
    <string name="sett_buscador_off">Buscador deshabilitado</string>
    <string name="sett_favoritos_on">Permitir agregar favoritos</string>
    <string name="sett_favoritos_off">No permitir agregar favoritos</string>
    <string name="sett_curso">BE-TP3 / Martin Rivas / 2022</string>
    <string name="sett_acerca1">Juan Pablo Forno</string>
    <string name="sett_acerca2">Gonzalo Migliore</string>
    <string name="sett_acerca3">Daniel Pisa</string>
    <string name="sett_g4">Group 4</string>
    <string name="fav_titulo">"Hola %1$s, estos son tus \npersonajes favoritos!"</string>
    <string name="home_title">Hola nombre, estos son tus personajes favoritos</string>
    <string name="card_origen">Origen:</string>
    <string name="card_especie">Especie:</string>
    <string name="card_status">Status</string>
    <string name="card_name">Nombre</string>
    <string name="card_add_fav">Agregado a favoritos!</string>




</resources>