<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayoutLogin1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bordes_fragments"
    tools:context=".main.login.LoginFragment">


    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_titulo"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextUsuario"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bordes_rounded_black"
        android:ems="10"
        android:hint="@string/login_usuario"
        android:textSize="20sp"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitulo" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:ems="10"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:hint="@string/login_password"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10sp"
        android:background="@drawable/bordes_rounded_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsuario" />

    <TextView
        android:id="@+id/textViewOlvidaste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_olvidaste"
        android:textSize="11sp"
        android:layout_marginTop="10dp"
        android:paddingStart="15sp"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/buttonContinuar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/login_continuar"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:backgroundTint="@color/verde_claro"
        app:strokeColor="#000000"
        app:strokeWidth="2dp"
        app:cornerRadius="10dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>